@@ -38,7 +38,7 @@ class AllTest(unittest.TestCase):
         self.check_all("Cookie")
         self.check_all("Queue")
         self.check_all("SimpleHTTPServer")
-        self.check_all("SocketServer")
+        self.check_all("socketserver")
         self.check_all("aifc")
         self.check_all("base64")
         self.check_all("bdb")
